@@ -1,5 +1,10 @@
 2009-03-03  Vincent Untz  <vuntz@gnome.org>
 
+	* private.h: fix header
+	* Makefile.am: add private.h
+
+2009-03-03  Vincent Untz  <vuntz@gnome.org>
+
 	Make sure the translations of gnome-desktop can be used for the randr
 	stuff. Fix bug #573744.
 
